@@ -1,6 +1,9 @@
 Version 2.0.20 release (2014/10/30)
 -------------------------------------------
 
+Display all the comments for a student, no only the last 2 academic
+years.
+
 Section list added to Infobook search.
 
 Added meals attendance report for a month.
